# Klickit

./: .dockerignore  .env.example  .gitignore  00_START_HERE.md  AGENTS.md  KLICKIT_PORTABILITY_RETROFIT_PROMPT.md  MASTER_CURSOR_BOOTSTRAP_PROMPT.md  PACKAGE_FILE_INDEX.md  README.md  package-lock.json  package.json  render.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
blueprints/: BLUEPRINT_MANIFEST.md  manifest.json
docs/: ACCOUNT_TRANSFER_RUNBOOK.md  ARCHITECTURE.md  BLUEPRINT_CONFLICTS.md  BLUEPRINT_INDEX.md  CHANGELOG.md  CURRENT_STATUS.md  CURSOR_MEMORY_CHECK.md  DATA_EXPORT_CONTRACT.md  DECISION_LOG.md  DEPENDENCY_AND_LICENSE_REGISTER.md  DEPLOYMENT_RESPONSIBILITIES.md  ENVIRONMENT_AND_SECRET_INVENTORY.md  FRONTEND_READINESS_AUDIT.md  GIT_SETUP.md  KNOWN_ISSUES.md  LOCAL_GATEWAY.md  MACHINE_AUDIT.md  MASTER_PHASE_PLAN.md  MCP_CONNECTOR_PLAN.md  MIGRATION_BASELINE.md  MILESTONE10_EVIDENCE.md  MILESTONE1_MANUAL_TEST_GUIDE.md  MILESTONE2_EVIDENCE.md  MILESTONE3_EVIDENCE.md  MILESTONE4_EVIDENCE.md  MILESTONE5_EVIDENCE.md  MILESTONE6_EVIDENCE.md  MILESTONE7_EVIDENCE.md  MILESTONE8_EVIDENCE.md  MILESTONE9_EVIDENCE.md  MILESTONE_APPROVALS.md  PHASE_COMPLETION_TEMPLATE.md  PORTABILITY_CHARTER.md  PORTABILITY_TEST_LOG.md  PROJECT_CHARTER.md  PROVIDER_EXIT_PLAN.md  PROVIDER_INVENTORY.md  REBUILD_FROM_ZERO_RUNBOOK.md  REQUIREMENT_AUTHORITY.md  RISK_REGISTER.md  (+17 more)
scripts/: apply-local-migrations.ps1  backup-gateway-manifest.ps1  check-machine.ps1  compile-migrations-from-blueprint.mjs  drill-72-hour-offline.mjs  (+7 more)
(+229 files in other folders)
