[package]
name = "klickit-desktop"
version = "0.0.0"
description = "KlickIt Windows desktop shell"
authors = ["KlickIt"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[lib]
name = "klickit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "klickit-desktop"
path = "src/main.rs"
